# castelo_maldoso

./: .gitignore  CMakeLists.txt  Chefao.cpp  Chefao.h  Chefao.hpp  DiagramaJogoModelo (1).uml  Elemento.hpp  Ente.cpp  Ente.hpp  Entidade.cpp  Entidade.h  Entidade.hpp  Espinho.cpp  Espinho.hpp  Fase.cpp  Fase.hpp  FasePrimeira.cpp  FasePrimeira.h  FasePrimeira.hpp  FaseSegunda.cpp  FaseSegunda.h  FaseSegunda.hpp  GerenciadorColisoes.cpp  GerenciadorColisoes.h  GerenciadorColisoes.hpp  GerenciadorEventos.cpp  GerenciadorEventos.hpp  GerenciadorGrafico.cpp  GerenciadorGrafico.hpp  IDs.hpp  Inimigo.cpp  Inimigo.h  Inimigo.hpp  InimigoFacil.cpp  InimigoFacil.hpp  InimigoMedio.cpp  InimigoMedio.h  InimigoMedio.hpp  Jogador.cpp  Jogador.h  (+27 more)
diagramasUML/: DiagramaAtual.~ml  DiagramaAtual2.uml  DiagramaAtual2.~ml  DiagramaModelo.uml  DiagramaVersao3(fato).uml  DiagramaVersao3.uml  DiagramaVersao3.~ml
include/: Chefao.h  Ente.h  Entidade.h  Espinho.h  Fase.h  FasePrimeira.h  FaseSegunda.h  GerenciadorColisoes.h  GerenciadorEventos.h  GerenciadorGrafico.h  IDs.h  Inimigo.h  InimigoFacil.h  InimigoMedio.h  Jogador.h  Lama.h  Lista.h  ListaEntidade.h  Mago.h  Menu.h  Obstaculo.h  Ork.h  Personagem.h  Plataforma.h  Principal.h  Projetil.h  Zumbi.h  chao.h
src/: Chefao.cpp  Ente.cpp  Entidade.cpp  Espinho.cpp  Fase.cpp  FasePrimeira.cpp  FaseSegunda.cpp  GerenciadorColisoes.cpp  GerenciadorEventos.cpp  GerenciadorGrafico.cpp  Inimigo.cpp  InimigoFacil.cpp  InimigoMedio.cpp  Jogador.cpp  Lama.cpp  ListaEntidade.cpp  Mago.cpp  Menu.cpp  Obstaculo.cpp  Ork.cpp  Personagem.cpp  Plataforma.cpp  Principal.cpp  Projetil.cpp  Zumbi.cpp
